package edu.austral.ingsis.math.binaryOperation;

import edu.austral.ingsis.math.Function;

public class Addition extends BinaryOperation {
    public Addition(Function left, Function right) {
        super(left, right);
    }
}
