package edu.austral.ingsis.math.binaryOperation;

import edu.austral.ingsis.math.Function;

public class Elevate extends BinaryOperation {
    public Elevate(Function left, Function right) {
        super(left, right);
    }
}
